@@ -119,6 +119,23 @@ if test "$enable_evdev" != "no"; then
 	fi
 fi
 
+dnl Check for input build
+WCM_OPTION_INPUT=no
+AC_ARG_ENABLE(input,
+[  --enable-input  Enable building input.o               default=no],
+	, enable_input=no)
+if test "$enable_input" != "no"; then
+	if test "$WCM_ENV_KERNEL" != "yes"; then
+		echo "***"; echo "*** WARNING:";
+		echo "*** Unable to compile input.o without kernel build environment"
+		echo "*** input.o will not be built"
+		echo "***"
+	else
+		WCM_OPTION_INPUT=yes
+		WCM_MODULES="$WCM_MODULES input.o"
+	fi
+fi
+
 dnl Check for wacomdrv build
 WCM_OPTION_WACOMDRV=no
 AC_ARG_ENABLE(wacomdrv,
@@ -284,6 +301,7 @@ echo "             xidump - $WCM_OPTION_XIDUMP"
 echo "              hid.o - $WCM_OPTION_HID $WCM_PATCH_HID"
 echo "         usbmouse.o - $WCM_OPTION_USBMOUSE"
 echo "            evdev.o - $WCM_OPTION_EVDEV"
+echo "            input.o - $WCM_OPTION_INPUT"
 echo "        wacom_drv.o - $WCM_OPTION_WACOMDRV $WCM_PATCH_WACOMDRV"
 if test -n "$WCM_OPTION_WACOMDRVV3"; then
 	echo "     wacom_drv-v3.o - $WCM_OPTION_WACOMDRVV3 $WCM_PATCH_WACOMDRVV3"
